Fix page overflow

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -962,6 +962,14 @@ footer#colophon {
 
 @media only screen and (max-width:1025px) {
 
+html,
+body {
+    box-sizing: border-box;
+    width: 100%;
+    overflow: hidden;	
+}
+
+
 .page-wrapper {
     background: white;
     padding: 0 10px 10px;
